demo-operator/roles/demo/files/web-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: tutorial
  labels:
    app: words-web
spec:
  template:
    metadata:
      labels:
        app: words-web
    spec:
      containers:
      - name: web
        image: quay.io/loren123/web:latest
        ports:
        - containerPort: 8000
          name: words-web
