demo-operator/roles/demo/files/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: words
  namespace: tutorial
  labels:
    app: words-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: api
  selector:
    app: words-api
  clusterIP: None
