demo-operator/roles/demo/files/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: words-web
spec:
  ports:
    - port: 8081
      targetPort: 8000
      name: web
  selector:
    app: words-web
  type: LoadBalancer
