demo-operator/roles/demo/files/web-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: web
  namespace: tutorial
spec:
  to:
    kind: Service
    name: web
